--- a/html/21-22/medias.html
+++ b/html/21-22/medias.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../../styles/style.css">
     <link rel="stylesheet" href="../../styles/medias.css"/>
     <link rel="stylesheet" href="../../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
@@ -98,9 +99,9 @@
     <main>
         <div class="principal-content">
             <section class="section-principal">
-                <div class="section-titre">
+                <div class="section-titre-bis">
                     <a href="../gallerie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                    <h2 class="titre-section">LES MÉDIAS</h2>
+                    <h2 class="titre-section-bis">LES MÉDIAS</h2>
                 </div>
                 <div id="liste" class="liste">
                     <div class="trieuse">
