--- a/html/actualites.html
+++ b/html/actualites.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/actualites.css"/>
     <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
