--- a/html/grades.html
+++ b/html/grades.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/grades.css"/>
     <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
@@ -1002,27 +1003,43 @@
         </div>
     </main>
     <footer>
-        <div class="liens-off">
-            <a id="lien-france-judo" href="https://www.ffjudo.com/" class="social">
-                <img id="logo-france-judo" class="logo-lien-footer" src="../assets/img/accueil/Logo_France_Judo.png" alt="Fédération france judo">
-            </a>
-            <a id="lien-grand-est" href="https://www.judograndest.fr/" class="social">
-                <img id="logo-grand-est" class="logo-lien-footer" src="../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue judo Grand-Est">
-            </a>
-            <a id="lien-moselle" href="https://www.judo-moselle.fr/" class="social">
-                <img id="logo-moselle" class="moselle" src="../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle de judo">
-            </a>
-            <a id="lien-facebook" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="logo-facebook" class="logo-lien-footer" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
-            </a>
+        <div class="liens-footer">
+            <div class="liens-off">
+                <h5 class="titre-liens-footer">Les liens officiels :</h5>
+                <div class="img-liens">
+                    <a id="lien-france-judo" href="https://www.ffjudo.com/" class="social">
+                        <img id="logo-france-judo" class="logo-lien-footer" src="../assets/img/accueil/Logo_France_Judo.png" alt="Fédération france judo">
+                    </a>
+                    <a id="lien-grand-est" href="https://www.judograndest.fr/" class="social">
+                        <img id="logo-grand-est" class="logo-lien-footer" src="../assets/img/accueil/LOGO-judo-grand-est-retina-1-1.png" alt="Ligue judo Grand-Est">
+                    </a>
+                    <a id="lien-moselle" href="https://www.judo-moselle.fr/" class="social">
+                        <img id="logo-moselle" class="moselle" src="../assets/img/accueil/moselle-logo.png" alt="Comité de Moselle de judo">
+                    </a>
+                    <a id="lien-facebook" href="https://www.facebook.com/judoclubf/" class="social">
+                        <img id="logo-facebook" class="logo-lien-footer" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
+                    </a>
+                </div>
+            </div>
+            <div class="liens-off">
+                <h5 class="titre-liens-footer">Les sponsors :</h5>
+                <div class="img-liens">
+                    <a href="" class="social">
+                        <img class="logo-lien-footer" src="../assets/img/accueil/partnair1.PNG" alt="Partenaire 1">
+                    </a>
+                    <a href="" class="social">
+                        <img class="logo-lien-footer" src="../assets/img/accueil/partnair2.PNG" alt="Partenaire 2">
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Contact</a>
+                    <a href="../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Nous contacter</a>
                 </li>
                 <li class="contact">
-                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Partenaires</a>
+                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Mentions légales</a>
                 </li>
             </ul>
         </div>
