sous-liens all pages

--- a/html/encyclopedie/categories.html
+++ b/html/encyclopedie/categories.html
@@ -427,7 +427,7 @@
                 <div class="nav-rapide">
                     <a href="histoire-judo.html" class="lien-rapide">Histoire du Judo</a>
                     <a href="histoire-club.html" class="lien-rapide">Histoire du Club</a>
-                    <a href="" class="rapide lien-actif">Poids & Catégories</a>
+                    <a href="" class="rapide lien-actif">Catégories Âges & Poids</a>
                 </div>
             </div>
         </nav>
