--- a/html/encyclopedie/histoire-judo.html
+++ b/html/encyclopedie/histoire-judo.html
@@ -427,7 +427,7 @@
                 <div class="nav-rapide">
                     <a href="" class="rapide lien-actif">Histoire du Judo</a>
                     <a href="histoire-club.html" class="lien-rapide">Histoire du Club</a>
-                    <a href="categories.html" class="lien-rapide">Poids & Catégories</a>
+                    <a href="categories.html" class="lien-rapide">Catégories Âges & Poids</a>
                 </div>
             </div>
         </nav>
