--- a/html/gallerie.html
+++ b/html/gallerie.html
@@ -426,7 +426,7 @@
                 <div class="nav-rapide">
                     <a href="../html/encyclopedie/histoire-judo.html" class="lien-rapide">Histoire du Judo</a>
                     <a href="../html/encyclopedie/histoire-club.html" class="lien-rapide">Histoire du Club</a>
-                    <a href="../html/encyclopedie/categories.html" class="lien-rapide">Poids & Catégories</a>
+                    <a href="../html/encyclopedie/categories.html" class="lien-rapide">Catégories Âges & Poids</a>
                 </div>
             </div>
         </nav>
