début animation page results

--- a/html/results/results.html
+++ b/html/results/results.html
@@ -441,12 +441,12 @@
                 </div>
                 <div class="classement">
                     <nav class="tag-nav">
-                        <span class="nav-tableau">Mini-Poussins</span>
-                        <span class="nav-tableau">Mini-Poussines</span>
-                        <span class="nav-tableau">Poussins</span>
-                        <span class="nav-tableau">Poussines</span>
+                        <span class="nav-tableau nav-actif" data-name="mini-poussins">Mini-Poussins</span>
+                        <span class="nav-tableau" data-name="mini-poussines">Mini-Poussines</span>
+                        <span class="nav-tableau" data-name="poussins">Poussins</span>
+                        <span class="nav-tableau" data-name="poussines">Poussines</span>
                     </nav>
-                    <div class="table-m-poussins tableau">
+                    <div class="table-m-poussins tableau" data-name="mini-poussins">
                         <h3 class="titre-tableau">Classement Mini-Poussins</h3>
                         <div class="divTable petits-tigres">
                             <div class="divTableHeading">
@@ -545,7 +545,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table-m-poussins tableau">
+                    <div class="table-m-poussins tableau table-hidden" data-name="mini-poussines">
                         <h3 class="titre-tableau">Classement Mini-Poussines</h3>
                         <div class="divTable petits-tigres">
                             <div class="divTableHeading">
@@ -644,7 +644,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table-m-poussins tableau">
+                    <div class="table-m-poussins tableau table-hidden" data-name="poussins">
                         <h3 class="titre-tableau">Classement Poussins</h3>
                         <div class="divTable petits-tigres">
                             <div class="divTableHeading">
@@ -743,7 +743,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="table-m-poussins tableau">
+                    <div class="table-m-poussins tableau table-hidden" data-name="poussines">
                         <h3 class="titre-tableau">Classement Poussines</h3>
                         <div class="divTable petits-tigres">
                             <div class="divTableHeading">
