--- a/html/encyclopedie/categories.html
+++ b/html/encyclopedie/categories.html
@@ -437,7 +437,7 @@
             <section class="section-principal">
                 <div class="section-titre-bis">
                     <a href="../encyclopedie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
-                    <h2 class="titre-section-bis">CATÉGORIES D'ÂGES & POIDS</h2>
+                    <h2 class="titre-section-bis">CATÉGORIES D'ÂGES & DE POIDS</h2>
                 </div>
                 <div class="tableau-categorie">
                     <p class="texte-categorie">
