mise aux normes nom pdf pour w3c

--- a/html/grades.html
+++ b/html/grades.html
@@ -49,12 +49,12 @@
             <div class="naviguation">
                 <a href="../html/reglements.html" class="lien-nav">Règlements</a>
                 <div class="nav-rapide">
-                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">Télécharger le règlement intérieur</a>
-                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">Télécharger le Code Sportif</a>
-                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">Télécharger les textes Officiels</a>
-                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">Télécharger le guide d'enseignement et formation</a>
-                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">Télécharger le document de licence et contrat</a>
-                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">Télécharger le règlement d'arbitrage International</a>
+                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement-Intérieur.pdf">Télécharger le règlement intérieur</a>
+                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE-SPORTIF-2021-2022.pdf">Télécharger le Code Sportif</a>
+                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES-OFF-2021-2022-Interactif.pdf">Télécharger les textes Officiels</a>
+                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT-ET-FORMATION-2021-2022.pdf">Télécharger le guide d'enseignement et formation</a>
+                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE-CONTRAT-CLUB-2021-2022.pdf">Télécharger le document de licence et contrat</a>
+                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Reglement-arbitrage-FIJ-2020.pdf">Télécharger le règlement d'arbitrage International</a>
                     <a class="lien-rapide" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">Télécharger le règlement d'arbitrage National</a>
                 </div>
             </div>
