--- a/html/reglements.html
+++ b/html/reglements.html
@@ -48,12 +48,12 @@
             <div class="naviguation page-active">
                 <a href="../html/reglements.html" class="lien-actif">Règlements</a>
                 <div class="nav-rapide">
-                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">Télécharger le règlement intérieur</a>
-                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">Télécharger le Code Sportif</a>
-                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">Télécharger les textes Officiels</a>
-                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">Télécharger le guide d'enseignement et formation</a>
-                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">Télécharger le document de licence et contrat</a>
-                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">Télécharger le règlement d'arbitrage International</a>
+                    <a class="lien-rapide" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement-Intérieur.pdf">Télécharger le règlement intérieur</a>
+                    <a class="lien-rapide" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE-SPORTIF-2021-2022.pdf">Télécharger le Code Sportif</a>
+                    <a class="lien-rapide" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES-OFF-2021-2022-Interactif.pdf">Télécharger les textes Officiels</a>
+                    <a class="lien-rapide" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT-ET-FORMATION-2021-2022.pdf">Télécharger le guide d'enseignement et formation</a>
+                    <a class="lien-rapide" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE-CONTRAT-CLUB-2021-2022.pdf">Télécharger le document de licence et contrat</a>
+                    <a class="lien-rapide" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Reglement-arbitrage-FIJ-2020.pdf">Télécharger le règlement d'arbitrage International</a>
                     <a class="lien-rapide" download="Arbitrage-National-2021" href="../assets/documents/reglements/ReglementNationalJudoFrancais_CNA_07_21.pdf">Télécharger le règlement d'arbitrage National</a>
                 </div>
             </div>
@@ -437,27 +437,27 @@
             <section class="section-principal">
                 <h2 class="titre-section">LES RÈGLEMENTS</h2>
                 <article id="liste" class="liste">
-                    <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement Intérieur.pdf">
+                    <a class="reglement" download="Reglement-interieur.pdf" href="../assets/documents/reglements/Règlement-Intérieur.pdf">
                         <span class="telecharger">Télécharger le Règlement Intérieur</span> 
                         <img src="../assets/documents/reglements/fene-logo.png">
                     </a>
-                    <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE SPORTIF 2021.2022.pdf">
+                    <a class="reglement" download="Code-Sportif-2021-2022.pdf" href="../assets/documents/reglements/CODE-SPORTIF-2021-2022.pdf">
                         <span class="telecharger">Télécharger le Code Sportif</span> 
                         <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
                     </a>
-                    <a class="reglement" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES_OFF_2021 2022 Interactif.pdf">
+                    <a class="reglement" download="Texte-Officiel-2021-2022.pdf" href="../assets/documents/reglements/TEXTES-OFF-2021-2022-Interactif.pdf">
                         <span class="telecharger">Télécharger les Textes Officiels</span> 
                         <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
                     </a>
-                    <a class="reglement" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT ET FORMATION 2021.2022.pdf">
+                    <a class="reglement" download="Enseignement-Formation-2021-2022" href="../assets/documents/reglements/ENSEIGNEMENT-ET-FORMATION-2021-2022.pdf">
                         <span class="telecharger">Télécharger le guide d'enseignement et formation</span> 
                         <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
                     </a>
-                    <a class="reglement" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE. CONTRAT CLUB 2021.2022.pdf">
+                    <a class="reglement" download="Licence-Contrat-2021-2022" href="../assets/documents/reglements/LICENCE-CONTRAT-CLUB-2021-2022.pdf">
                         <span class="telecharger">Télécharger le document de licence et contrat</span> 
                         <img src="../assets/documents/reglements/Logo_FF_Judo_DA.svg">
                     </a>
-                    <a class="reglement" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Réglement arbitrage FIJ - été 2020_Rul-1597761161.pdf">
+                    <a class="reglement" download="Arbitage-International-FIJ-2020" href="../assets/documents/reglements/Reglement-arbitrage-FIJ-2020.pdf">
                         <span class="telecharger">Télécharger le règlement d'arbitrage International</span> 
                         <img src="../assets/documents/reglements/AppIcon98x98@2x.png">
                     </a>
