--- a/html/21-22/medias.html
+++ b/html/21-22/medias.html
@@ -441,15 +441,18 @@
                 </div>
                 <div id="liste" class="liste">
                     <div class="trieuse">
-                        <button id="nav-button" aria-haspopup="true" tabindex="0" aria-controls="menu2" class="trier">Trier par<i class="fas fa-angle-up chevron visible"></i></button>
-                        <ul class="tri-categorie visible" role="menu2" aria-labelledby="nav-button">
-                            <li class="ligne-tri" role="none">
-                                <span tabindex="0" role="menuitem" class="tri-popularite tri-bouton">Popularité</span>
-                            </li>
-                            <li class="ligne-tri" role="none">
-                                <span tabindex="0" role="menuitem" class="tri-date tri-bouton">Date</span>
-                            </li>
-                        </ul>
+                        <div id="nav-button" aria-haspopup="true" tabindex="0" aria-controls="menu2" class="trier">
+                            <span class="titre-tri">Trier par</span>
+                            <i class="fas fa-angle-up chevron visible"></i>
+                            <ul class="tri-categorie visible" role="menu2" aria-labelledby="nav-button">
+                                <li class="ligne-tri" role="none">
+                                    <span tabindex="0" role="menuitem" class="tri-popularite tri-bouton">Popularité</span>
+                                </li>
+                                <li class="ligne-tri" role="none">
+                                    <span tabindex="0" role="menuitem" class="tri-date tri-bouton">Date</span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="media-content">
                         <a class="media photo" href="../../assets/img/media/entrainement-2019.jpg">
@@ -536,10 +539,10 @@
                         <span class="nb-likes"><i class="far fa-heart coeur"></i>298 j'aime</span>
                     </div>
                     <div class="media-content">
-                        <a class="media photo" href="../../assets/img/accueil/banderole.jpg">
-                            <img data-index="14" src="../../assets/img/accueil/banderole.jpg">
+                        <a class="media photo" href="../../assets/img/media/assemblée.jpg">
+                            <img data-index="14" src="../../assets/img/media/assemblée.jpg">
                         </a>
-                        <span class="nb-likes"><i class="far fa-heart coeur"></i>26 j'aime</span>
+                        <span class="nb-likes"><i class="far fa-heart coeur"></i>160 j'aime</span>
                     </div>
                     <div class="media-content">
                         <a class="media photo" href="../../assets/img/media/stage-petits.jpg">
