--- a/html/encyclopedie/histoire-judo.html
+++ b/html/encyclopedie/histoire-judo.html
@@ -518,6 +518,7 @@
                         </p>
                         <div class="img-paraph">
                             <img src="../../assets/img/encyclopedie/h-judo/Jigoro_Kano-kimino.jpg" alt="Portrait de Jigoro Kano en Kimono" class="image-paragraphe">
+                            <img src="../../assets/img/encyclopedie/h-judo/Kano_Jigoro_1936.jpg" alt="Portrait de Jigoro Kano" class="image-paragraphe">
                         </div>
                         <p class="texte-paraph">
                             La Fédération française de judo, créée en 1947, regroupe aujourd'hui environ 460 000 licenciés. La France est, après le Japon, l'un des pays du monde où le judo s'est le plus développé, et les Français obtiennent de bons résultats dans les compétitions internationales. Alexandre fut champion olympique en 1988 dans la catégorie des poids légers, et que les Françaises Nowak en super-légères et Fleury en mi-moyennes furent championnes olympiques en 1992. Douillet fut trois fois champion du monde en 1994, 1995 et 1996, et champion olympique en 1996. L'équipe de France messieurs remporta la Coupe du monde par équipes, qui a lieu tous les quatre ans, en 1993.
