ajout des modales (contact + mentions)

--- a/html/grades/techniques.html
+++ b/html/grades/techniques.html
@@ -495,14 +495,21 @@
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="../../html/contact.html" class="contact-form"><i class="fas fa-envelope-open-text icone-contact"></i>Nous contacter</a>
+                    <a href="../../html/contact.html" class="contact-form modal-contact"><i class="fas fa-envelope-open-text icone-contact"></i>Nous contacter</a>
                 </li>
                 <li class="contact">
-                    <a href="" class="contact-form"><i class="fas fa-hands-helping icone-partenaire"></i>Mentions légales</a>
+                    <a href="" class="contact-form modal-legal"><i class="fas fa-hands-helping icone-partenaire"></i>Mentions légales</a>
                 </li>
             </ul>
         </div>
     </footer>
+    <div class="content-modal-legal">
+        <div class="modal-body">
+            <button class="modal__close__legal"><i class="fas fa-times"></i></button>
+            <h4 class="titre-legal-modal">Mentions Légales</h4>
+            <p class="legal-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam eius quidem, non, ullam, nesciunt eum consequatur velit accusantium fugiat neque a quo temporibus rem. Rem molestiae nihil quidem! Eos, iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, ipsam explicabo. At accusantium voluptas, atque sit ipsum iste error quod animi itaque quia nulla culpa est reiciendis, voluptates quibusdam blanditiis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore commodi ipsam error, explicabo veritatis deleniti reprehenderit, recusandae voluptas suscipit repellat quod minus! Aut reprehenderit labore molestias, ipsam debitis quia explicabo?</p>
+        </div>
+    </div>
     <script src="../../js/techniques.js"></script>
 </body>
 </html>
