responsive header + footer ok nav port a finir

--- a/html/results/results.html
+++ b/html/results/results.html
@@ -880,10 +880,16 @@
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="../../html/contact.html" class="contact-form modal-contact"><i class="fas fa-envelope-open-text icone-contact"></i>Nous contacter</a>
+                    <a href="html/contact.html" class="contact-form modal-contact">
+                        <i class="fas fa-envelope-open-text icone-contact"></i>
+                        <span class="texte-contact">Nous contacter</span>
+                    </a>
                 </li>
                 <li class="contact">
-                    <a href="" class="contact-form modal-legal"><i class="fas fa-hands-helping icone-partenaire"></i>Mentions légales</a>
+                    <a href="" class="contact-form modal-legal">
+                        <i class="fas fa-info-circle icone-contact"></i>
+                        <span class="texte-contact">Mentions légales</span>
+                    </a>
                 </li>
             </ul>
         </div>
