--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <h1 class="titre">JUDO CLUB<br>FENETRANGE</h1>
             <img src="assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
+        <div class="burger">
+            <span class="icone-burger"></span>
+        </div>
         <nav>
             <div class="naviguation page-active">
                 <a href="" class="lien-actif">Activités</a>
