--- a/html/gallerie.html
+++ b/html/gallerie.html
@@ -21,6 +21,9 @@
             <h1 class="titre">JUDO CLUB<br>FENETRANGE</h1>
             <img src="../assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
+        <div class="burger">
+            <span class="icone-burger"></span>
+        </div>
         <nav>
             <div class="naviguation">
                 <a href="../index.html" class="lien-nav">Activités</a>
