--- a/html/21-22/medias.html
+++ b/html/21-22/medias.html
@@ -416,7 +416,7 @@
                 </div>
             </div>
             <div class="naviguation page-active">
-                <a href="../gallerie.html" class="lien-nav">Gallerie</a>
+                <a href="../gallerie.html" class="lien-nav">Galerie</a>
                 <div class="nav-rapide">
                     <a href="" class="rapide lien-actif">Saison 2021/2022</a>
                     <a href="medias.html" class="lien-rapide">Saison 2020/2021</a>
