--- a/html/gallerie.html
+++ b/html/gallerie.html
@@ -415,7 +415,7 @@
                 </div>
             </div>
             <div class="naviguation page-active">
-                <a href="../html/gallerie.html" class="lien-actif">Gallerie</a>
+                <a href="../html/gallerie.html" class="lien-actif">Galerie</a>
                 <div class="nav-rapide">
                     <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2021/2022</a>
                     <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2020/2021</a>
