--- a/html/resultats.html
+++ b/html/resultats.html
@@ -416,7 +416,7 @@
                 </div>
             </div>
             <div class="naviguation">
-                <a href="../html/gallerie.html" class="lien-nav">Gallerie</a>
+                <a href="../html/gallerie.html" class="lien-nav">Galerie</a>
                 <div class="nav-rapide">
                     <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2021/2022</a>
                     <a href="../html/21-22/medias.html" class="lien-rapide">Saison 2020/2021</a>
