maquette version présentation v1.0 ok

--- a/html/grades.html
+++ b/html/grades.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
-    <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
+    <meta name="description" content="Site du judo club de Fénétrange. Grade du judo-club.">
+    <meta name="keywords" content="judo, judogi, judoka, judokas, judokate, judokates, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/grades.css"/>
@@ -1039,7 +1039,7 @@
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="html/contact.html" class="contact-form modal-contact">
+                    <a href="../html/contact.html" class="contact-form modal-contact">
                         <i class="fas fa-envelope-open-text icone-contact"></i>
                         <span class="texte-contact">Nous contacter</span>
                     </a>
