--- a/html/membres.html
+++ b/html/membres.html
@@ -784,7 +784,7 @@
         <div class="liens-contact">
             <ul class="liste-contact">
                 <li class="contact">
-                    <a href="html/contact.html" class="contact-form modal-contact">
+                    <a href="mailto:judoclubfenetrange@laposte.net" class="contact-form modal-contact">
                         <i class="fas fa-envelope-open-text icone-contact"></i>
                         <span class="texte-contact">Nous contacter</span>
                     </a>
